--- a/src/app/communications/presentation/pages/folders/folders.component.html
+++ b/src/app/communications/presentation/pages/folders/folders.component.html
@@ -1,27 +1,26 @@
-<mat-toolbar class="bg-blue-500 text-white">
-    <span>Archivos</span>
-    <span class="flex-1"></span>
-    <button (click)="openCreateFolderDialog()" mat-flat-button color="primary" class="bg-white text-blue-500">Agregar</button>
-  </mat-toolbar>
-  
-  <div #scrolling class="grid grid-cols-4 gap-4 p-4">
-    <div
-      *ngFor="let folder of folders(); let i = index"
-      class="relative group cursor-pointer bg-gray-800 text-white p-4 rounded-lg flex flex-col items-center hover:bg-gray-700 transition"
-      [routerLink]="[folder._id]" 
-      >
+<mat-toolbar>
+  <span>Archivos</span>
+  <span class="flex-1"></span>
+  <button (click)="openCreateFolderDialog()" mat-flat-button>Agregar</button>
+</mat-toolbar>
 
-      <div class="w-24 mb-4">
-        <img src="images/icons/folder.png" alt="">
-      </div>
-
-      <div class="truncate w-full text-center">{{ folder.name }}</div>
-      <button
-        class="absolute top-2 right-2 opacity-0 group-hover:opacity-100 transition-opacity"
-        (click)="deleteFolder(folder._id, $event)"
-      >
-        <mat-icon>delete</mat-icon>
-      </button>
+<div #scrolling class="grid grid-cols-1 sm:grid-cols-4 gap-4 p-4">
+  @for (folder of folders(); track $index) {
+  <div
+    class="relative group cursor-point p-4 flex flex-col items-center rounded-2xl mybox"
+    [routerLink]="[folder._id]"
+  >
+    <div class="w-32 mb-4">
+      <img src="images/icons/folder.png" alt="" />
     </div>
+
+    <div class="truncate w-full text-center font-medium">{{ folder.name }}</div>
+    <button
+      class="absolute top-2 right-2 opacity-0 group-hover:opacity-100 transition-opacity"
+      (click)="deleteFolder(folder._id, $event)"
+    >
+      <mat-icon>delete</mat-icon>
+    </button>
   </div>
-  
+  }
+</div>
