--- a/src/app/communications/presentation/pages/archives/archives.component.html
+++ b/src/app/communications/presentation/pages/archives/archives.component.html
@@ -1,6 +1,47 @@
-
 <mat-toolbar>
-    <button mat-icon-button (click)="back()">
-      <mat-icon>arrow_back</mat-icon>
-    </button>
+  <button mat-icon-button (click)="back()">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
 </mat-toolbar>
+
+<table mat-table [dataSource]="datasource()" class="mat-elevation-z8">
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="code">
+    <th mat-header-cell *matHeaderCellDef>Alterno</th>
+    <td mat-cell *matCellDef="let element">{{ element.procedure.code }}</td>
+  </ng-container>
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="officer">
+    <th mat-header-cell *matHeaderCellDef>Nombbre</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.officer | titlecase }}
+    </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef>Weight</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.createdAt | date : "short" }}
+    </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="options">
+    <th mat-header-cell *matHeaderCellDef>Symbol</th>
+    <td mat-cell *matCellDef="let element"></td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
