--- a/src/app/communications/presentation/pages/archives/archives.component.html
+++ b/src/app/communications/presentation/pages/archives/archives.component.html
@@ -1,12 +1,22 @@
 <mat-toolbar>
-  <button mat-icon-button (click)="back()">
+  <button mat-icon-button backButton>
     <mat-icon>arrow_back</mat-icon>
   </button>
   <span class="ml-2">Contenido</span>
 </mat-toolbar>
-<div class="py-2 px-6 text-xl font-sans">Folder / {{ folderName() }}</div>
 
-<table mat-table [dataSource]="datasource()" class="mat-elevation-z8">
+<div class="flex flex-col sm:flex-row items-center justify-between py-2 px-3">
+  <div class="text-lg font-medium">{{ folderName() }} </div>
+  <div class="w-full sm:w-1/4 h-11">
+    <search-input
+      [initValue]="term()"
+      (onSearch)="search($event)"
+      placeholder="Alterno / Referencia"
+    />
+  </div>
+</div>
+
+<table mat-table [dataSource]="datasource()">
   <ng-container matColumnDef="code">
     <th mat-header-cell *matHeaderCellDef>Alterno</th>
     <td mat-cell *matCellDef="let element">{{ element.procedure.code }}</td>
