--- a/src/app/administration/presentation/pages/dependencies-manage/dependencies-manage.component.html
+++ b/src/app/administration/presentation/pages/dependencies-manage/dependencies-manage.component.html
@@ -15,11 +15,6 @@
 
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="datasource()">
-      <ng-container matColumnDef="sigla">
-        <th mat-header-cell *matHeaderCellDef>Sigla</th>
-        <td mat-cell *matCellDef="let element">{{ element.sigla }}</td>
-      </ng-container>
-
       <ng-container matColumnDef="nombre">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
@@ -37,30 +32,22 @@
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="activo">
-        <th mat-header-cell *matHeaderCellDef>Estado</th>
-        <td mat-cell *matCellDef="let element" class="w-32">
-          @if (element.activo) {
-          <span
-            class="inline-flex items-center rounded-md bg-green-100 px-2 py-1 text-xs font-medium text-green-800 ring-1 ring-inset ring-green-600/20"
-            >Activo
-          </span>
-          } @else {
-          <span
-            class="inline-flex items-center rounded-md bg-red-100 px-2 py-1 text-xs font-medium text-red-700 ring-1 ring-inset ring-red-600/10"
-          >
-            Inactivo
-          </span>
-          }
-        </td>
-      </ng-container>
-
       <ng-container matColumnDef="menu">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element" class="w-8">
-          <button (click)="edit(element)" mat-icon-button>
-            <mat-icon>edit</mat-icon>
+          <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
           </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="edit(element)">
+              <mat-icon>edit</mat-icon>
+              <span>Editar</span>
+            </button>
+            <button mat-menu-item (click)="viewPersonnel(element)">
+              <mat-icon>group</mat-icon>
+              <span>Personal</span>
+            </button>
+          </mat-menu>
         </td>
       </ng-container>
 
