--- a/src/app/administration/presentation/pages/dependencies-manage/dependency-dialog/dependency-dialog.component.html
+++ b/src/app/administration/presentation/pages/dependencies-manage/dependency-dialog/dependency-dialog.component.html
@@ -23,23 +23,32 @@
       </div>
     </div>
     <div class="flex justify-between py-2 px-3">
-      <span class="text-lg">Areas</span>
-      <button mat-icon-button (click)="addRequirement()">
+      <span class="text-lg">Areas: ({{ requeriments.length }})</span>
+      <button
+        mat-icon-button
+        (click)="addRequirement()"
+        [disabled]="requeriments.length === 6"
+      >
         <mat-icon>add</mat-icon>
       </button>
     </div>
 
-    <div formArrayName="areas" class="overflow-y-scroll max-h-64">
+    <div
+      formArrayName="areas"
+      class="overflow-y-scroll max-h-64 p-2 overflow-x-hidden border-2 border-gray-300 rounded-lg"
+    >
       <div *ngFor="let control of requeriments.controls; let i = index">
-        <div class="flex gap-x-2 gap-y-1 items-center" [formGroupName]="i">
+        <div class="flex gap-x-2 items-center" [formGroupName]="i">
           <div class="flex-1">
             <mat-form-field>
               <mat-label>Area {{ i + 1 }}</mat-label>
-              <input
-                matInput
-                placeholder="Ingrese el nombre del area"
-                formControlName="nombre"
-              />
+              <input matInput placeholder="Nombre" formControlName="name" />
+            </mat-form-field>
+          </div>
+          <div class="w-36">
+            <mat-form-field>
+              <mat-label>Codigo</mat-label>
+              <input matInput type="number"  min="1" max="100"  formControlName="code" />
             </mat-form-field>
           </div>
           <div class="h-12">
@@ -49,6 +58,9 @@
           </div>
         </div>
       </div>
+      @if(requeriments.length === 0){
+      <div class="p-2">Sin areas registradas</div>
+      }
     </div>
     <!-- <mat-checkbox formControlName="activo"> Habilitado </mat-checkbox> -->
   </form>
