correcion comunicaciones y generacion de word

--- a/src/app/communications/presentation/pages/docs/docs.component.html
+++ b/src/app/communications/presentation/pages/docs/docs.component.html
@@ -53,7 +53,7 @@
               <mat-icon>edit</mat-icon>
               <span>Editar</span>
             </button>
-            <button mat-menu-item (click)="generateTemplate()">
+            <button mat-menu-item (click)="generateTemplate(row)">
               <mat-icon>article</mat-icon>
               <span>Plantilla</span>
             </button>
