--- a/src/app/communications/presentation/pages/docs/docs.component.html
+++ b/src/app/communications/presentation/pages/docs/docs.component.html
@@ -49,7 +49,7 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item [disabled]="!row.isEnable">
+            <button mat-menu-item (click)="update(row)">
               <mat-icon>edit</mat-icon>
               <span>Editar</span>
             </button>
