--- a/src/app/communications/presentation/pages/docs/doc-dialog/doc-dialog.component.html
+++ b/src/app/communications/presentation/pages/docs/doc-dialog/doc-dialog.component.html
@@ -2,22 +2,26 @@
 <mat-dialog-content>
   <form [formGroup]="formDoc" class="pt-2">
     @if(!data){
-    <mat-form-field>
-      <mat-label>Tipo de documento</mat-label>
-      <mat-select formControlName="type">
-        @for (type of types; track $index) {
-        <mat-option [value]="type.value">{{ type.label }}</mat-option>
-        }
-      </mat-select>
-    </mat-form-field>
-    <div class="mb-3">
-      <mat-checkbox #generalCode formControlName="isGeneralCode">
-        Cite General @if(generalCode.checked){
-        <span class="font-medium">
-          (El cite sera generado con la numeracion de la unidad)
-        </span>
-        }
-      </mat-checkbox>
+    <div class="flex gap-x-2">
+      <div class="w-1/4">
+        <mat-form-field>
+          <mat-label>Genear cite por</mat-label>
+          <mat-select formControlName="isGeneralCode">
+            <mat-option [value]="false">AREA</mat-option>
+            <mat-option [value]="true">UNIDAD</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="flex-1">
+        <mat-form-field>
+          <mat-label>Tipo de documento</mat-label>
+          <mat-select formControlName="type">
+            @for (type of types; track $index) {
+            <mat-option [value]="type.value">{{ type.label }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+      </div>
     </div>
     }
     <mat-form-field>
@@ -59,7 +63,10 @@
       </div>
     </div>
     <div class="py-2">
-      <mat-checkbox (change)="showViaField.set($event.checked)">
+      <mat-checkbox
+        [checked]="showViaField()"
+        (change)="showViaField.set($event.checked)"
+      >
         Habilitar (Via)
       </mat-checkbox>
     </div>
