--- a/src/app/communications/presentation/pages/docs/docs.component.html
+++ b/src/app/communications/presentation/pages/docs/docs.component.html
@@ -1,19 +1,87 @@
-<div class="flex px-4 py-3 items-center">
-  <div class="text-2xl">Documentos</div>
-  <div class="flex-1"></div>
-  <button mat-flat-button (click)="create()">
-    <mat-icon>add</mat-icon>
-    Agregar
+<mat-toolbar>
+  <span>Documentos</span>
+  <span class="flex-1"></span>
+  <button
+    mat-icon-button
+    aria-label="Filter"
+    cdkOverlayOrigin
+    #menuOverlay="cdkOverlayOrigin"
+    matTooltip="Filtrar"
+    (click)="isFilterOpen = !isFilterOpen"
+  >
+    <mat-icon>filter_alt</mat-icon>
   </button>
+  <button mat-icon-button (click)="create()">
+    <mat-icon>add</mat-icon>
+  </button>
+</mat-toolbar>
+
+<ng-template
+  cdkConnectedOverlay
+  [cdkConnectedOverlayOrigin]="menuOverlay"
+  [cdkConnectedOverlayOpen]="isFilterOpen"
+>
+  <div class="overlay p-3 sm:w-[400px]">
+    <div class="flex items-center justify-between px-2 mb-4">
+      <div class="flex flex-col">
+        <span class="text-lg font-medium">Filtro avanzado</span>
+        <span class="text-sm">Ingrese los campos</span>
+      </div>
+      <div>
+        <button mat-icon-button (click)="isFilterOpen = false">
+          <mat-icon>close</mat-icon>
+        </button>
+      </div>
+    </div>
+    <form [formGroup]="filterForm">
+      <div class="flex flex-col">
+        <!-- <mat-form-field appearance="outline">
+          <mat-label>Grupo de tramite</mat-label>
+          <mat-select formControlName="group">
+            @for (group of groups; track $index) {
+            <mat-option [value]="group.value">{{ group.label }}</mat-option>
+            }
+          </mat-select>
+        </mat-form-field> -->
+        <mat-form-field appearance="outline">
+          <mat-label>Tipo de documento</mat-label>
+          <mat-select formControlName="type">
+            @for (group of documentTypes; track $index) {
+            <mat-option [value]="group.value">
+              {{ group.label }}
+            </mat-option>
+            }
+          </mat-select>
+        </mat-form-field>
+
+        <year-picker [year]="filterForm.get('year')?.value" />
+      </div>
+    </form>
+
+    <div class="flex justify-end gap-x-2 mt-2">
+      <button mat-button (click)="reset()">Restablecer</button>
+      <button mat-flat-button (click)="filter()">Buscar</button>
+    </div>
+  </div>
+</ng-template>
+
+<div class="flex justify-end py-2 px-4">
+  <div class="w-full px-2 sm:w-1/4 h-11">
+    <search-input
+      [initValue]="term()"
+      (onSearch)="search($event)"
+      placeholder="Referencia"
+    />
+  </div>
 </div>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 px-4">
   <div class="table-container">
     <table mat-table [dataSource]="datasource()">
       <ng-container matColumnDef="cite">
         <th mat-header-cell *matHeaderCellDef>Cite</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.cite }}
+        <td mat-cell *matCellDef="let row" class="sm:w-[200px]">
+          <span class="tracking-wide font-semibold">{{ row.cite }}</span>
         </td>
       </ng-container>
       <ng-container matColumnDef="reference">
@@ -23,11 +91,12 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="sender">
-        <th mat-header-cell *matHeaderCellDef>Remitente</th>
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.sender.fullname }}
+          {{ row.sender.fullname | titlecase }}
         </td>
       </ng-container>
+
       <ng-container matColumnDef="procedure">
         <th mat-header-cell *matHeaderCellDef>Tramite</th>
         <td mat-cell *matCellDef="let row">
@@ -36,6 +105,12 @@
           } @else {
           <span class="text-orange-600">SIN ADJUNTAR</span>
           }
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Fecha</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.createdAt | date : "shortDate" }}
         </td>
       </ng-container>
       <ng-container matColumnDef="options">
@@ -49,7 +124,11 @@
             <mat-icon>more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="update(row)">
+            <button
+              mat-menu-item
+              (click)="update(row)"
+              [disabled]="row.procedure"
+            >
               <mat-icon>edit</mat-icon>
               <span>Editar</span>
             </button>
